# dotfiles

./: .gitignore  .gitmodules  AGENTS.md  README.md  a.bat  setup.bat  setup.ps1  setup.sh
brew/: cask.txt  default.txt
choco/: packages.txt
conf/redis/: dgame.conf  punk.conf  punkww.conf
files/: .bash_profile  .bashrc  .gitconfig  .gitconfig-windows  .gitignore_global  .profile  .zprofile  .zsh_aliases  .zshrc  bashrc  pyproject.toml
files/.config/mise/: config.toml
files/.config/uv/: uv.toml
files/.ssh/: .gitignore
files/.ssh/conf.d/: config
files/.ssh/conf.d/macos/: config
files/.zfunc/: _poetry  chisiki.zsh  update-claude-code.zsh  update-claude.zsh  update-tools.zsh
files/macos/: .bash_profile  .bashrc
files/ssh/: authorized_keys  config  known_hosts
files/ssh/conf.d/: config  mine
files/windows/: .bash_profile  .bashrc
mas/: default.txt
