[project]
name = "home"
description = ""
authors = [
    {name = "moscowmule2240",email = "moscowmule2240@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
claude-monitor = ">=3.1.0"

